--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ h2 {
     line-height: 1.2;
     font-weight: 500;
 }
+a:hover,
+a:focus{
+    text-shadow: 1px 1px 11px green;
+}
 h3 {
     font-weight: 400;
 }
@@ -49,4 +53,17 @@ h4{
     font-size: 1.25rem;
     line-height: 1.4;
     font-weight: 500;
+}
+.active-link{
+    font-weight: 800;
+    text-decoration: none;
+}
+.show-on-hover{
+    display: none;
+}
+.scavenger-hunt:hover .show-on-hover{
+    display: block;
+}
+.scavenger-hunt:focus .show-on-hover{
+    display: block;
 }
