--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ p {
 }
 
 .bio {
-    font-size: 1.25rem;
+    font-size: 0.75rem;
     font-family: georgia;
     line-height: 1.2;
     font-weight: bolder;
@@ -28,7 +28,7 @@ p {
 
 
 h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     line-height: 1.2;
     font-weight: 600;
 }
@@ -53,7 +53,7 @@ h4 {
 }
 
 p {
-    color: #245352
+    color: #245352;
 }
 
 ul {
